@@ -81,6 +81,7 @@ Changes Since 0.4
 
 * docutils/writers/latex2e/__init__.py:
 
+  - Recognize table class: borderless, nolines, booktabs, standard.
   - Fix: Renaming contents section does not work with latex writer; SF
     bug #1487405.
   - Applied patch for custom roles with classes from Edward Loper.
